--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "chart.js": "^3.6.0",
+    "faker": "^5.5.3",
+    "lodash": "^4.17.21",
     "multiselect-react-dropdown": "^2.0.7",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
